[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/gender.png" type="Texture" id=1]
[ext_resource path="res://assets/skin.png" type="Texture" id=2]
[ext_resource path="res://assets/hairstyle.png" type="Texture" id=3]
[ext_resource path="res://assets/sweater.png" type="Texture" id=4]
[ext_resource path="res://assets/boots.png" type="Texture" id=5]
[ext_resource path="res://newPlayer.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/Leto Text Sans Defect.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/icon1.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.243137, 0.807843, 0.937255, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.243137, 0.807843, 0.937255, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.243137, 0.807843, 0.937255, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.243137, 0.807843, 0.937255, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.243137, 0.807843, 0.937255, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.14902, 0.74902, 0.886275, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0.878431, 0.933333, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.243137, 0.937255, 0.415686, 0.45098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.658824, 0.956863, 0.568627, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=18]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=19]
size = 25
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 100.0

[node name="genderButton" type="Button" parent="HBoxContainer"]
margin_top = 25.0
margin_right = 50.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/genderButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 1 )

[node name="skinButton" type="Button" parent="HBoxContainer"]
margin_left = 54.0
margin_top = 25.0
margin_right = 104.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/skinButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -22.5
margin_right = 22.5
margin_bottom = 22.5
texture = ExtResource( 2 )

[node name="hairstyleButton" type="Button" parent="HBoxContainer"]
margin_left = 108.0
margin_top = 25.0
margin_right = 158.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/hairstyleButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -22.5
margin_right = 22.5
margin_bottom = 22.5
texture = ExtResource( 3 )

[node name="sweaterButton" type="Button" parent="HBoxContainer"]
margin_left = 162.0
margin_top = 25.0
margin_right = 212.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/sweaterButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -22.5
margin_right = 22.5
margin_bottom = 22.5
texture = ExtResource( 4 )

[node name="bootsButton" type="Button" parent="HBoxContainer"]
margin_left = 216.0
margin_top = 25.0
margin_right = 266.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/bootsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -22.5
margin_right = 22.5
margin_bottom = 22.5
texture = ExtResource( 5 )

[node name="iconButton" type="Button" parent="HBoxContainer"]
margin_left = 270.0
margin_top = 25.0
margin_right = 320.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/iconButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -22.5
margin_right = 22.5
margin_bottom = 22.5
texture = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -220.0
margin_bottom = -67.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 512.0
margin_right = 512.0
margin_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_colors/font_color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )
custom_fonts/font = SubResource( 16 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -175.0
margin_right = 300.0
margin_bottom = 175.0
rect_min_size = Vector2( 600, 350 )
custom_styles/panel = SubResource( 17 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0

[node name="backButton" type="Button" parent="HBoxContainer2"]
margin_top = 45.0
margin_right = 150.0
margin_bottom = 105.0
rect_min_size = Vector2( 150, 60 )
size_flags_horizontal = 2
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 1 )
text = "Назад"

[node name="okButton" type="Button" parent="HBoxContainer2"]
margin_left = 250.0
margin_top = 45.0
margin_right = 400.0
margin_bottom = 105.0
rect_min_size = Vector2( 150, 60 )
size_flags_horizontal = 8
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 1 )
text = "Создать"

[connection signal="pressed" from="HBoxContainer/genderButton" to="." method="_on_genderButton_pressed"]
[connection signal="pressed" from="HBoxContainer/skinButton" to="." method="_on_skinButton_pressed"]
[connection signal="pressed" from="HBoxContainer/hairstyleButton" to="." method="_on_hairstyleButton_pressed"]
[connection signal="pressed" from="HBoxContainer/sweaterButton" to="." method="_on_sweaterButton_pressed"]
[connection signal="pressed" from="HBoxContainer/bootsButton" to="." method="_on_bootsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/iconButton" to="." method="_on_iconButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/okButton" to="." method="_on_okButton_pressed"]
